fix(options): prevent options to be hidden on small screens

--- a/app/widgets/aot-options/aot-options.scss
+++ b/app/widgets/aot-options/aot-options.scss
@@ -14,6 +14,7 @@
     -o-transform: translate3d(-40px, -108px, 0);
     -webkit-transform: translate3d(-40px, -108px, 0);
     transform: translate3d(-40px, -108px, 0);
+    z-index: 1000;
 }
 
 .option img {
